--- a/graph/graph.html
+++ b/graph/graph.html
@@ -5,9 +5,8 @@ sample json file with tensos you want to test
 <input type="file" id="sample_json" accept="application/json">
 </head>
 <body>
+<script src="upload.js"></script>
 <script src="graph.js"></script>
-<script>
-</script>
 
 
 </body>
