--- a/graph/graph.html
+++ b/graph/graph.html
@@ -6,7 +6,8 @@ sample json file with tensos you want to test
 </head>
 <body>
 <script src="upload.js"></script>
-<script src="graph.js"></script>
+<script src="core.js"></script>
+<script src="benchmark.js"></script>
 
 
 </body>
