--- a/graph/graph.html
+++ b/graph/graph.html
@@ -8,6 +8,7 @@ sample json file with tensos you want to test
 <script src="upload.js"></script>
 <script src="core.js"></script>
 <script src="benchmark.js"></script>
+<script src="compare.js"></script>
 
 
 </body>
