--- a/graph/graph.html
+++ b/graph/graph.html
@@ -9,6 +9,7 @@ sample json file with tensos you want to test
 <script src="core.js"></script>
 <script src="benchmark.js"></script>
 <script src="compare.js"></script>
+<script src="index.js"></script>
 
 
 </body>
