--- a/graph/graph.html
+++ b/graph/graph.html
@@ -10,8 +10,7 @@ sample json file with tensos you want to test
 <script src="benchmark.js"></script>
 <script src="compare.js"></script>
 <script src="index.js"></script>
-
-
+<script src="benchmark_new.js"></script>
 </body>
 
 
