--- a/graph/graph.html
+++ b/graph/graph.html
@@ -11,6 +11,7 @@ sample json file with tensos you want to test
 <script src="compare.js"></script>
 <script src="index.js"></script>
 <script src="benchmark_new.js"></script>
+<script src="benchmark.js"></script>
 </body>
 
 
