--- a/graph/graph.html
+++ b/graph/graph.html
@@ -8,10 +8,10 @@ sample json file with tensos you want to test
 <script src="upload.js"></script>
 <script src="core.js"></script>
 <script src="benchmark.js"></script>
+<script src="stitched.js"></script>
 <script src="compare.js"></script>
 <script src="index.js"></script>
 <script src="benchmark_new.js"></script>
-<script src="benchmark.js"></script>
 </body>
 
 
