--- a/graph/graph.html
+++ b/graph/graph.html
@@ -7,11 +7,11 @@ sample json file with tensos you want to test
 <body>
 <script src="upload.js"></script>
 <script src="core.js"></script>
-<script src="benchmark.js"></script>
+<script src="multi_benchmark.js"></script>
 <script src="stitched.js"></script>
 <script src="compare.js"></script>
 <script src="index.js"></script>
-<script src="benchmark_new.js"></script>
+<script src="single_benchmark.js"></script>
 </body>
 
 
