--- a/graph/graph.html
+++ b/graph/graph.html
@@ -5,6 +5,7 @@ sample json file with tensos you want to test
 <input type="file" id="sample_json" accept="application/json">
 </head>
 <body>
+<div id="log"></div>
 <script src="upload.js"></script>
 <script src="core.js"></script>
 <script src="multi_benchmark.js"></script>
